<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IMIT - Imitate It</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="next_turn_">Next turn</string>
    <string name="welcome">Welcome to IMIT!</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="continue_str">Continue</string>
    <string name="guesser_prompt">This has not been set.</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="newGameButton">New game</string>
    <string name="checkGamesButton">Current games</string>
    <string name="leaderboardsButton">Leaderboards</string>
    <string name="showFriendsButton">Friends</string>
    <string name="settingsButton">Settings</string>
    <string name="homeButton">Home</string>
    
</resources>
