<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="visible" >

        <!-- sign-in button -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/welcome"
            android:textAppearance="@style/GuessWordText"
            android:textColor="#FFFFFF" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameplay_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        tools:context=".ImitActivity" >

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/match_instructions"
            android:textAppearance="@style/HelpText"
            android:width="300dp" />

        <TextView
            android:id="@+id/turn_counter_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/turn_counter"
            android:textAppearance="@style/GuessWordText"
            android:width="300dp" />

        <EditText
            android:id="@+id/data_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:inputType="textEmailAddress|textEmailSubject"
            android:maxLines="1"
            android:text="@string/hello_world"
            android:textAppearance="@style/GuessWordText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCancelClicked"
                android:text="@string/cancel"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />
            
            <Button
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDoneClicked"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/done"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/leaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onLeaveClicked"
                android:text="@string/leave"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/finishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onFinishClicked"
                android:text="@string/finish"
                android:textAppearance="@style/HelpText.Heading"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/matchup_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="gone"
        tools:context=".ImitActivity" >

        <LinearLayout
            android:id="@+id/secret_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:visibility="visible"
            tools:context=".ImitActivity"
            tools:ignore="UselessParent" >
            
            <ImageView
                android:id="@+id/homeLogo"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                android:src="@drawable/button_home"
                android:contentDescription="@string/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:layout_gravity="top" />

            <TextView
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_small"
                android:text=""
                android:textAppearance="@style/HelpText.Caption"
                android:textColor="#FFFFFF" />

            <ImageButton
                android:id="@+id/startMatchButton"
                android:layout_width="wrap_content"
                android:layout_height="42dip"
                android:layout_gravity="center_horizontal"
                android:onClick="onStartMatchClicked"
                android:src="@drawable/button_new_game"
                android:contentDescription="@string/newGameButton"
                android:background="@null" />
            
            <ImageButton
                android:id="@+id/checkGamesButton"
                android:layout_width="wrap_content"
                android:layout_height="42dip"
                android:layout_marginTop="@dimen/items_margin"
                android:layout_gravity="center_horizontal"
                android:onClick="onCheckGamesClicked"
                android:src="@drawable/button_current_games"
                android:contentDescription="@string/checkGamesButton"
                android:background="@null" />
            
            <ImageButton
                android:id="@+id/leaderboards_button"
                android:layout_width="wrap_content"
                android:layout_height="42dip"
                android:layout_marginTop="@dimen/items_margin"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/button_leaderboards"
                android:contentDescription="@string/leaderboardsButton"
                android:background="@null" />
            
            <ImageButton
                android:id="@+id/showFriendsButton"
                android:layout_width="wrap_content"
                android:layout_height="42dip"
                android:layout_marginTop="@dimen/items_margin"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/button_friends"
                android:contentDescription="@string/showFriendsButton"
                android:background="@null" />
            
            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="wrap_content"
                android:layout_height="42dip"
                android:layout_marginTop="@dimen/items_margin"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/button_settings"
                android:contentDescription="@string/settingsButton"
                android:background="@null" />
            
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAAAA"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</RelativeLayout>